@startuml

title __APP's Class Diagram__\n

  namespace com.oinotna.umbra {
    class com.oinotna.umbra.BuildConfig {
    }
  }
  

  namespace com.oinotna.umbra {
    class com.oinotna.umbra.MyBroadcastReceiver {
    }
  }
  

  namespace com.oinotna.umbra {
    class com.oinotna.umbra.SecretKeyViewModel {
    }
  }
  

  namespace com.oinotna.umbra {
    namespace db {
      class com.oinotna.umbra.db.ServerPc {
      }
    }
  }
  

  namespace com.oinotna.umbra {
    namespace db {
      interface com.oinotna.umbra.db.ServerPcDao {
      }
    }
  }
  

  namespace com.oinotna.umbra {
    namespace db {
      class com.oinotna.umbra.db.ServerPcDao_Impl {
      }
    }
  }
  

  namespace com.oinotna.umbra {
    namespace db {
      abstract class com.oinotna.umbra.db.ServerPcDatabase {
      }
    }
  }
  

  namespace com.oinotna.umbra {
    namespace db {
      class com.oinotna.umbra.db.ServerPcDatabase_Impl {
      }
    }
  }
  

  namespace com.oinotna.umbra {
    namespace db {
      class com.oinotna.umbra.db.ServerPcRepository {
      }
    }
  }
  

  namespace com.oinotna.umbra {
    namespace mouse {
      class com.oinotna.umbra.mouse.Mouse {
      }
    }
  }
  

  namespace com.oinotna.umbra {
    namespace mouse {
      interface com.oinotna.umbra.mouse.MouseControl {
      }
    }
  }
  

  namespace com.oinotna.umbra {
    namespace mouse {
      class com.oinotna.umbra.mouse.MouseSocket {
      }
    }
  }
  

  namespace com.oinotna.umbra {
    namespace thread {
      class com.oinotna.umbra.thread.Finder {
      }
    }
  }
  

  namespace com.oinotna.umbra {
    namespace thread {
      class com.oinotna.umbra.thread.MyInterruptThread {
      }
    }
  }
  

  namespace com.oinotna.umbra {
    namespace thread {
      interface com.oinotna.umbra.thread.RunnableWithSocket {
      }
    }
  }
  

  namespace com.oinotna.umbra {
    namespace ui.home {
      class com.oinotna.umbra.ui.home.DialogPasswordViewModel {
      }
    }
  }
  

  namespace com.oinotna.umbra {
    namespace ui.home {
      class com.oinotna.umbra.ui.home.HomeFragment {
      }
    }
  }
  

  namespace com.oinotna.umbra {
    namespace ui.home {
      class com.oinotna.umbra.ui.home.HomeViewModel {
      }
    }
  }
  

  namespace com.oinotna.umbra {
    namespace ui.home {
      class com.oinotna.umbra.ui.home.PasswordDialog {
      }
    }
  }
  

  namespace com.oinotna.umbra {
    namespace ui.home {
      class com.oinotna.umbra.ui.home.ServersAdapter {
      }
    }
  }
  

  namespace com.oinotna.umbra {
    namespace ui.mouse {
      class com.oinotna.umbra.ui.mouse.MouseFragment {
      }
    }
  }
  

  namespace com.oinotna.umbra {
    namespace ui.mouse {
      class com.oinotna.umbra.ui.mouse.MouseViewModel {
      }
    }
  }
  

  namespace com.oinotna.umbra {
    namespace ui.settings {
      class com.oinotna.umbra.ui.settings.SettingsFragment {
      }
    }
  }
  

  com.oinotna.umbra.MyBroadcastReceiver -up-|> android.content.BroadcastReceiver
  com.oinotna.umbra.MyBroadcastReceiver o-- com.oinotna.umbra.MyBroadcastReceiver.OnReceiveListener : mListener
  com.oinotna.umbra.SecretKeyViewModel -up-|> androidx.lifecycle.ViewModel
  com.oinotna.umbra.db.ServerPcDao_Impl .up.|> com.oinotna.umbra.db.ServerPcDao
  com.oinotna.umbra.db.ServerPcDatabase -up-|> androidx.room.RoomDatabase
  com.oinotna.umbra.db.ServerPcDatabase_Impl -up-|> com.oinotna.umbra.db.ServerPcDatabase
  com.oinotna.umbra.db.ServerPcDatabase_Impl o-- com.oinotna.umbra.db.ServerPcDao : _serverPcDao
  com.oinotna.umbra.db.ServerPcRepository o-- com.oinotna.umbra.db.ServerPcDao : mServerPcDao
  com.oinotna.umbra.mouse.Mouse .up.|> com.oinotna.umbra.mouse.MouseControl
  com.oinotna.umbra.mouse.Mouse o-- com.oinotna.umbra.mouse.MouseSocket : socket
  com.oinotna.umbra.mouse.MouseSocket .up.|> java.lang.Runnable
  com.oinotna.umbra.mouse.MouseSocket o-- com.oinotna.umbra.db.ServerPc : pc
  com.oinotna.umbra.thread.Finder .up.|> com.oinotna.umbra.thread.RunnableWithSocket
  com.oinotna.umbra.ui.home.DialogPasswordViewModel -up-|> androidx.lifecycle.ViewModel
  com.oinotna.umbra.ui.home.HomeFragment .up.|> android.view.View.OnClickListener
  com.oinotna.umbra.ui.home.HomeFragment .up.|> androidx.lifecycle.Observer
  com.oinotna.umbra.ui.home.HomeFragment .up.|> com.oinotna.umbra.ui.home.ServersAdapter.onItemClickListner
  com.oinotna.umbra.ui.home.HomeFragment .up.|> com.oinotna.umbra.ui.home.ServersAdapter.onMenuItemClickListener
  com.oinotna.umbra.ui.home.HomeFragment -up-|> androidx.fragment.app.Fragment
  com.oinotna.umbra.ui.home.HomeFragment o-- com.oinotna.umbra.ui.home.DialogPasswordViewModel : dialogPasswordViewModel
  com.oinotna.umbra.ui.home.HomeFragment o-- com.oinotna.umbra.ui.home.HomeViewModel : homeViewModel
  com.oinotna.umbra.ui.home.HomeFragment o-- com.oinotna.umbra.ui.home.ServersAdapter : mAdapter
  com.oinotna.umbra.ui.home.HomeFragment o-- com.oinotna.umbra.ui.mouse.MouseViewModel : mouseViewModel
  com.oinotna.umbra.ui.home.HomeFragment o-- com.oinotna.umbra.SecretKeyViewModel : secretKeyViewModel
  com.oinotna.umbra.ui.home.HomeViewModel -up-|> androidx.lifecycle.AndroidViewModel
  com.oinotna.umbra.ui.home.HomeViewModel o-- com.oinotna.umbra.db.ServerPcRepository : mServerPcRepository
  com.oinotna.umbra.ui.home.HomeViewModel o-- com.oinotna.umbra.thread.MyInterruptThread : thFinder
  com.oinotna.umbra.ui.home.PasswordDialog .up.|> android.content.DialogInterface.OnClickListener
  com.oinotna.umbra.ui.home.PasswordDialog .up.|> android.view.SurfaceHolder.Callback
  com.oinotna.umbra.ui.home.PasswordDialog .up.|> androidx.activity.result.ActivityResultCallback
  com.oinotna.umbra.ui.home.PasswordDialog .up.|> com.google.android.gms.vision.Detector.Processor
  com.oinotna.umbra.ui.home.PasswordDialog -up-|> androidx.fragment.app.DialogFragment
  com.oinotna.umbra.ui.home.PasswordDialog o-- com.oinotna.umbra.ui.home.DialogPasswordViewModel : dialogPasswordViewModel
  com.oinotna.umbra.ui.home.PasswordDialog o-- com.oinotna.umbra.SecretKeyViewModel : secretKeyViewModel
  com.oinotna.umbra.ui.home.ServersAdapter -up-|> androidx.recyclerview.widget.RecyclerView.Adapter
  com.oinotna.umbra.ui.home.ServersAdapter o-- com.oinotna.umbra.ui.home.ServersAdapter.onItemClickListner : mListener
  com.oinotna.umbra.ui.home.ServersAdapter o-- com.oinotna.umbra.ui.home.ServersAdapter.onMenuItemClickListener : mListenerMenu
  com.oinotna.umbra.ui.mouse.MouseFragment .up.|> android.content.SharedPreferences.OnSharedPreferenceChangeListener
  com.oinotna.umbra.ui.mouse.MouseFragment .up.|> android.hardware.SensorEventListener
  com.oinotna.umbra.ui.mouse.MouseFragment .up.|> android.view.View.OnTouchListener
  com.oinotna.umbra.ui.mouse.MouseFragment -up-|> androidx.fragment.app.Fragment
  com.oinotna.umbra.ui.mouse.MouseFragment o-- com.oinotna.umbra.ui.mouse.MouseViewModel : mouseViewModel
  com.oinotna.umbra.ui.mouse.MouseViewModel .up.|> com.oinotna.umbra.mouse.MouseControl
  com.oinotna.umbra.ui.mouse.MouseViewModel -up-|> androidx.lifecycle.ViewModel
  com.oinotna.umbra.ui.mouse.MouseViewModel o-- com.oinotna.umbra.mouse.Mouse : mouse
  com.oinotna.umbra.ui.mouse.MouseViewModel o-- com.oinotna.umbra.db.ServerPc : pc
  com.oinotna.umbra.ui.settings.SettingsFragment -up-|> androidx.preference.PreferenceFragmentCompat


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
